[tool.poetry]
name = "btclib-node"
version = "0.0.0"
description = "Bitcoin node in python"
authors = ["Giacomo Caironi <giacomo.caironi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
plyvel = "^1.3.0"
http-parser = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
