[tool.poetry]
name = "btclib-node"
version = "0.0.0"
description = "Bitcoin node in python"
authors = ["Giacomo Caironi <giacomo.caironi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
plyvel = "^1.3.0"
btclib = "2020.11.23"
http-parser = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.2.0"
pytest-remotedata = "^0.3.2"
pydeps = "^1.9.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/unit", 'tests/functional']
python_files = "*.py"
python_functions = "test_*"
addopts = "--cov --durations=10 -n 4 --remote-data=any"
filterwarnings = ['ignore:cannot collect test class']

[tool.coverage.run]
omit = ["*/site-packages/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.isort]
profile = "hug"
src_paths = ["btclib_node", "tests"]
